@@ -52,7 +52,7 @@ char keynames[256][11]={
       "?","?","?","?","?","?","?","?",
       "?","?","?","?","?","?","?","?",
       "?","?","?","?","?","?","?","?",
-/*keys 127 - 255 = extended scancodes (preceeded with 0xe0) */
+/*keys 127 - 255 = extended scancodes (preceded with 0xe0) */
       "?","?","?","?","?","?","?","?",
       "?","?","?","?","?","?","?","?",
       "?","?","?","?","?","?","?","?",
